<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="app_bar_title">%s</string>
    <string name="detailed_card_time"><b>%s</b></string>
    <string name="current_temp"><b>%s</b></string>
    <string name="current_wind_speed"><b>%s %s</b></string>
    <string name="feels_like_temp"><b>%s</b></string>
    <string name="detailed_card_pressure"><b>%s</b></string>
    <string name="humidity_value">%s</string>
    <string name="wind">WIND</string>
    <string name="feels_like">FEELS LIKE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="pressure">PRESSURE</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="millibars_mbs">millibars (mbs)</string>
    <string name="inches_of_mercury_in">inches of mercury (in)</string>
    <string name="celsius_c">Celsius (°C)</string>
    <string name="fahrenheit_f">Fahrenheit (°F)</string>
    <string name="temperature_scale">Temperature scale:</string>
    <string name="check_your_internet_connection">Retrieving data failed. Please, check your internet connection.</string>
</resources>