<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.SettingsFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tempCard"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="31dp"
            android:clickable="true"
            app:cardBackgroundColor="@color/main_card_color"
            app:cardCornerRadius="16dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tempScaleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat700"
                    android:gravity="center_horizontal|top"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="-41sp"
                    android:text="@string/temperature_scale"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/tempRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="25dp"
                    android:checkedButton="@id/temp_celsius_radio"
                    app:layout_constraintTop_toBottomOf="@+id/tempScaleText">

                    <RadioButton
                        android:id="@+id/temp_celsius_radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat700"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="-41sp"
                        android:text="@string/celsius_c"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/temp_fahrenheit_radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/montserrat700"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="-41sp"
                        android:text="@string/fahrenheit_f"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pressureCard"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="31dp"
            app:cardBackgroundColor="@color/main_card_color"
            app:cardCornerRadius="16dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toBottomOf="@id/tempCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pressureScale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat700"
                    android:gravity="center_horizontal|top"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="-41sp"
                    android:text="Pressure unit:"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/pressure_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="25dp"
                    android:checkedButton="@id/pressure_millibars_radio"
                    app:layout_constraintTop_toBottomOf="@+id/pressureScale">

                    <RadioButton
                        android:id="@+id/pressure_millibars_radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat700"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="-41sp"
                        android:text="@string/millibars_mbs"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/pressure_mercury_radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/montserrat700"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="-41sp"
                        android:text="@string/inches_of_mercury_in"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>