<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodayOverviewFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Today"
                        android:textColor="@color/black"
                        android:textSize="32sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Saturday, 30 April"
                        android:textSize="16sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/outlinedButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="10dp"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                    android:text="Next 7 Days"
                    android:textAllCaps="false"
                    android:textColor="#095DB7" />
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:elevation="3dp"
                app:cardBackgroundColor="#095DB7"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detailed_card_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            tools:text="11:00 - 12:00" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/detailed_icon"
                            android:layout_width="match_parent"
                            android:layout_height="125dp"
                            android:src="@drawable/ic_drizzle" />

                        <TextView
                            android:id="@+id/detailed_card_temp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:letterSpacing="0.01"
                            android:lineSpacingExtra="-41sp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="50sp"
                            tools:text="23°C" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="40dp"
                        android:background="#D6E3FF" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="9dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:text="@string/wind"
                                android:textAlignment="viewEnd"
                                android:textColor="#D2E4FF"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/detailed_card_wind"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                tools:text="19 km/h" />
                        </LinearLayout>

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:background="#D6E3FF" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="9dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:text="@string/feels_like"
                                android:textAlignment="viewEnd"
                                android:textColor="#D2E4FF"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/detailed_card_feels_like"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                tools:text="23" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#D6E3FF" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="9dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:text="@string/humidity"
                                android:textAlignment="viewEnd"
                                android:textColor="#D2E4FF"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/detailed_card_humidity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                tools:text="5" />
                        </LinearLayout>

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:background="#D6E3FF" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="9dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:text="@string/pressure"
                                android:textAlignment="viewEnd"
                                android:textColor="#D2E4FF"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/pressure_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:letterSpacing="0.02"
                                android:textAlignment="viewEnd"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                tools:text="1015 mbar" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:scrollbars="horizontal" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>